# flappybird-cpp

./: .gitignore  .travis.yml  README-QT-PROJECT.md  README.md
ci/: build-flappybird-sdl.sh  setup-ci-env.sh
flappybird-qt/: config.cpp  config.h  flappybird-qt.pro  main.cpp
flappybird-qt/android/: AndroidManifest.xml
flappybird-qt/resources/: resources.qrc
flappybird-qt/src/: collision.cpp  collision.h  game-canvas.cpp  game-canvas.h  game-status.cpp  game-status.h  unlocker.cpp  unlocker.h  utils.cpp  utils.h
flappybird-qt/src/game-objects/: bg.cpp  bg.h  bird.cpp  bird.h  font.cpp  font.h  land.cpp  land.h  outline-text.cpp  outline-text.h  pipe.cpp  pipe.h
flappybird-sdl/: CMakeLists.txt  build-on-win.cmd
flappybird-sdl/src/: base_font.h  base_image.h  constant.h  high_score.h  main.cc  ui.h  utils.cc  utils.h
